...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="33p-r2-5q1">
                                <rect key="frame" x="344" y="218" width="42" height="18"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Sort" image="sort">
                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="onBtnSort:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CWv-RO-uPh"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="BbB-6q-jvd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="wNF-Wo-9cD"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2fx-rV-eet" secondAttribute="trailing" constant="28" id="y96-OK-r0Z"/>
                            <constraint firstItem="Hal-iX-RNq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="zts-SH-SL0"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Book a Room" id="S03-Rg-hoP">
                        <barButtonItem key="rightBarButtonItem" style="plain" id="0PV-m6-zfq">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="3Yz-go-ssB">
                                <rect key="frame" x="330" y="0.0" width="64" height="44"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="camera"/>
                                <connections>
                                    <action selector="onBtnCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xK5-w4-QXS"/>
                                </connections>
                            </button>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="btnSort" destination="33p-r2-5q1" id="9I9-QQ-PwS"/>
                        <outlet property="coveredView" destination="YgY-mI-TkK" id="Cle-LV-Ed9"/>
                        <outlet property="handlerConstraint" destination="gf0-qa-hOO" id="sIG-5p-IDm"/>
                        <outlet property="handlerView" destination="lDd-HJ-RoC" id="SML-U3-oe0"/>
                        <outlet property="sortContainerView" destination="BbB-6q-jvd" id="4hO-0X-ILW"/>
                        <outlet property="tblRoomAvailability" destination="2fx-rV-eet" id="iad-oC-bZR"/>
                        <outlet property="txtRoomDate" destination="Om9-07-WyQ" id="u7a-og-OMb"/>
                        <outlet property="txtRoomTime" destination="T1w-S6-sTc" id="9gp-Dv-0hA"/>
                        <segue destination="kJ1-sy-eDG" kind="show" identifier="segueQrCamera" id="DMH-3Y-gAq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="onBtnSortSelection:" destination="6oJ-0h-u8v" eventType="touchUpInside" id="DRy-SI-IWz"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Availability" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6f5-nX-62n">
                                        <rect key="frame" x="8" y="8" width="80.5" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0R-jQ-LaS">
                                        <rect key="frame" x="0.0" y="0.0" width="75" height="40"/>
                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="75" id="0LH-6g-CmJ"/>
                                        </constraints>
                                        <state key="normal" title="Reset">
                                            <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        </state>
                                        <connections>
                                            <action selector="onBtnReset:" destination="6oJ-0h-u8v" eventType="touchUpInside" id="SHM-Ed-2eO"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="246" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bZY-92-ZUb">
                                        <rect key="frame" x="90" y="0.0" width="284" height="40"/>
                                        <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Apply">
                                            <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        </state>
                                        <connections>
                                            <action selector="onBtnApply:" destination="6oJ-0h-u8v" eventType="touchUpInside" id="IsL-ro-5wZ"/>
                                        </connections>
                                    </button>
...
