...
        super.viewWillDisappear(animated)
        self.codeReader.stopReading()
    }
    
    // MARK: - private function
    private func setAccessibilityIdentifiers() {
        self.view.accessibilityIdentifier = "QrCamera"
    }
    
    private func readQRCode() {
        self.codeReader.configureDefaultComponent(cameraPosition: self.cameraPosition)
        self.codeReader.startReading { [weak self] (code, type) in
            
...
