...
      
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let cell = tableView.dequeueReusableCell(withIdentifier: "cell", for: indexPath) as! RoomCell
        let room = roomsList[indexPath.row]
       
        cell.name.text = room.name
        cell.name.accessibilityIdentifier = "Name"
        
        cell.level.text = "Level " + String(room.level)
        cell.level.accessibilityIdentifier = "Level"
        
        cell.capacity.text = room.capacity + " Pax"
        cell.capacity.accessibilityIdentifier = "Pax"
...
